# simple-bump

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
simple_bump/cli/: dto.py  main.py
simple_bump/cli/commands/: bump.py  config.py  push.py
simple_bump/core/: errors.py  files_operation.py  git_operation.py  handler.py  main.py  parser.py  tags.py  types.py
simple_bump/core/config/: constants.py  dto.py  enums.py
simple_bump/core/operations/: __init__.py  files.py  git.py  progress_bar.py
