[build-system]
requires = [ "setuptools>=61.0.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "simple_bump"
version = "0.4.1"
description = "Simple Semantic Versioning for Python projects"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
dependencies = [
    "click>=8,<9",
    "tomlkit>=0.12.0,<1.0.0",
    "gitpython>=3.0.0,<4.0.0",
    "semver>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "rich>=13.0.0,<14.0.0"
]

[[project.authors]]
name = "Aleksandr"
email = "rabbit_1399@icloud.com"

[project.license]
text = "MIT"

[project.scripts]
sp = "simple_bump.cli.main:cli"

[project.urls]
changelog = "https://github.com/tofuurem/simple-bump/blob/main/CHANGELOG.md"

[tool.sp]
version = "0.4.1"
version_fmt = "v{major}.{minor}.{patch}"
commit_msg = "Bump version {old} -> {new}"
version_files = []

[tool.sp.bump_levels]
major = []
minor = ["feat"]
patch = ["fix"]
